@@ -19,6 +19,7 @@ package org.keycloak.testsuite.federation.ldap;
 
 import org.jboss.logging.Logger;
 import org.junit.Assert;
+import org.junit.Assume;
 import org.junit.Before;
 import org.junit.ClassRule;
 import org.junit.FixMethodOrder;
@@ -94,12 +95,6 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
             LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, group11);
             LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, group12);
-
-            LDAPObject nonExistentChild = new LDAPObject();
-            LDAPDn nonExistentChildDn = group1.getDn().getParentDn();
-            nonExistentChildDn.addFirst(LDAPConstants.UID, "non-existent-child");
-            nonExistentChild.setDn(nonExistentChildDn);
-            LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, nonExistentChild);
         });
     }
 
@@ -115,8 +110,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         });
     }
 
-    @Test
-    public void test01_syncNoPreserveGroupInheritance() throws Exception {
+    private void testSyncNoPreserveGroupInheritance() throws Exception {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             RealmModel realm = ctx.getRealm();
@@ -143,7 +137,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -189,15 +183,42 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
     }
 
+    @Test
+    public void test01_syncNoPreserveGroupInheritance() throws Exception {
+        testSyncNoPreserveGroupInheritance();
+    }
 
     @Test
-    public void test02_syncWithGroupInheritance() throws Exception {
+    public void test02_syncNoPreserveGroupInheritanceWithOneGroupMissing() throws Exception {
+        Assume.assumeFalse("AD does not allow missing DN in group members",
+                LDAPConstants.VENDOR_ACTIVE_DIRECTORY.equals(ldapRule.getConfig().get(LDAPConstants.VENDOR)));
+
+        testingClient.server().run(session -> {
+            // create a non-existent group first in group1
+            LDAPTestContext ctx = LDAPTestContext.init(session);
+            RealmModel realm = ctx.getRealm();
+            ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(realm, ctx.getLdapModel(), "groupsMapper");
+            LDAPStorageProvider ldapProvider = LDAPTestUtils.getLdapProvider(session, ctx.getLdapModel());
+            GroupLDAPStorageMapper groupMapper = LDAPTestUtils.getGroupMapper(mapperModel, ldapProvider, realm);
+            LDAPObject group1 = groupMapper.loadLDAPGroupByName("group1");
+            LDAPObject nonExistentChild = new LDAPObject();
+            LDAPDn nonExistentChildDn = group1.getDn().getParentDn();
+            nonExistentChildDn.addFirst(LDAPConstants.UID, "non-existent-child");
+            nonExistentChild.setDn(nonExistentChildDn);
+            LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, nonExistentChild);
+        });
+
+        testSyncNoPreserveGroupInheritance();
+    }
+
+    @Test
+    public void test03_syncWithGroupInheritance() throws Exception {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             RealmModel realm = ctx.getRealm();
@@ -253,7 +274,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
 
     @Test
-    public void test03_syncWithDropNonExistingGroups() throws Exception {
+    public void test04_syncWithDropNonExistingGroups() throws Exception {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             RealmModel realm = ctx.getRealm();
@@ -291,7 +312,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/model2"));
 
             // Update group mapper to drop non-existing groups during sync
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.DROP_NON_EXISTING_GROUPS_DURING_SYNC, "true");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.DROP_NON_EXISTING_GROUPS_DURING_SYNC, "true");
             realm.updateComponent(mapperModel);
 
             // Sync groups again from LDAP. Assert LDAP non-existing groups deleted
@@ -309,12 +330,12 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
 
     @Test
-    public void test04_syncNoPreserveGroupInheritanceWithLazySync() throws Exception {
+    public void test05_syncNoPreserveGroupInheritanceWithLazySync() throws Exception {
         // Update group mapper to skip preserve inheritance
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -366,7 +387,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -374,7 +395,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
 
     @Test
-    public void test05SyncRestAPI() {
+    public void test06SyncRestAPI() {
         ComponentRepresentation groupMapperRep = findMapperRepByName("groupsMapper");
 
         try {
@@ -389,7 +410,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
     // KEYCLOAK-8253 - Test if synchronization of large number of LDAP groups takes linear time
     @Ignore("This test is not suitable for regular CI testing due to higher time / performance demand")
     @Test
-    public void test06_ldapGroupsSyncHasLinearTimeComplexity() throws Exception {
+    public void test07_ldapGroupsSyncHasLinearTimeComplexity() throws Exception {
         // Count of LDAP groups to test the duration of the sync operation. Defaults to 30k unless overridden via system property
         final int GROUPS_COUNT = (System.getProperties().containsKey(TEST_LDAP_GROUPS_SYNC_LINEAR_TIME_GROUPS_COUNT)) ?
                 Integer.valueOf(System.getProperty(TEST_LDAP_GROUPS_SYNC_LINEAR_TIME_GROUPS_COUNT)) : 30000;
@@ -406,7 +427,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
             // Set group mapper to skip preservation of inheritance to test group creation
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -428,7 +449,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
              *  created groups, existing as the result of (N-1)-th iteration are "just" updated.
              *  Also see NOTE: and the subsequent for loop, commented out, below for details.
              */
-            Long elapsedTime = new Long(0);
+            Long elapsedTime = Long.valueOf(0);
             for (int i = 1; i <= GROUPS_COUNT; i++) {
                 LDAPTestUtils.createLDAPGroup(session,
                                               appRealm,
